--- a/css.css
+++ b/css.css
@@ -4,6 +4,13 @@ body
     color: gainsboro;
     font-family: 'Segoe UI';
 }
+caption
+{
+    font-size: 32px;
+    font-weight: bold;
+    margin-bottom: 40px;
+    margin-top: 40px;
+}
 th
 {
     text-align: center;
